--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <div class="profile-photo">
                     <img src="./img/instagram-perfil.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como Rodrigo Santos</a>
+                <a href="#" class="instagram-login">Continue como Bento XVI</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é Rodrigo Santos ?</p>
+                <p class="not-account">Não é Bento XVI ?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou 
